# boikot

./: .gitignore  README.md  boikot.json  checkarchive.sh  comments.json  list.txt  new-row.py  run.sh  todo.txt  vercel.json
backend/: README.md  assemble.js  assemble.mjs  backend.test.js  brander.js  complete.mjs  filter.js  getRecord.js  math.js  package-lock.json  package.json
backend/data/: 410headlines.txt  README.md  bert-infer.py  check-sources.sh  ethics-headlines.txt  eval.py  get-sources.py  normal-headlines.txt  sources.txt  sources2.txt  sourcescores.csv  train-bert.py
backend/migrations/: inheritfromparent.mjs  keys.js  ownedbymany.mjs  thumbnails.js
backend/rustscrape/: Cargo.toml  rustscrape.js
backend/src/: addRecord.js  backend.test.js  brands.js  checksources.sh  filter.js  getRecord.js  getWikiPages.js  llm.js  prompts.js  reachplc.js  render.js  scrape.js  wiki.js  (+4 more)
mcp/: Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  vercel.json  vercelbuild.sh
mcp/api/: mcp.rs
mcp/src/: mcp.ts
notes/: animaltesting.txt  chinaforcedlabour.txt  lvmh.txt  privateequity.txt  sources.txt  todo.txt  underpayers.txt  urls.txt  usmilitarylist.txt  uyghur.txt
scripts/: README.md  addCompanyRecord.sh  addRecord.js  assemble.backend.mjs  assemble.js  assemble.mjs  brands.txt  complete.backend.mjs  getInfo.js  getLogo.js  llm.js  math.js  package-lock.json  package.json  prompts.js  render.js  scrapePage.js  scripts.test.js  search.js  test.js  testData.js  wiki.js  wiki.test.js
site/: README.md  app.jsx  package-lock.json  package.json
(+1173 files in other folders)
